PreProcess/micfort.GMDroid.PF/CSV/CSV.g4
grammar CSV;

file :  hdr row+ ;
hdr : field (',' field)* '\r'? '\n' ;

row : field (',' field)* '\r'? '\n' ;

field
    :   TEXT
    |   STRING
    |
    ;

TEXT : ~[,\n\r"]+ ;
STRING : '"' ('""'|~'"')* '"' ; // quote-quote is an escaped quote
